# ravi-torch7

./: CMakeLists.txt  DiskFile.c  FFInterface.lua  File.c  Generator.c  README.md  TensorMath.lua  general.h  init.lua  random.lua  torchcwrap.lua  utils.c
cmake/: FindLua.cmake  TorchConfig.cmake.in  TorchPackage.cmake
cwrap/: types.lua
generic/: Tensor.c  luaG.h
lib/: README.md
lib/TH/: CMakeLists.txt  THAllocator.c  THDiskFile.c  THGeneral.c  THGenerator.h  THMath.h  THMemoryFile.c  THRandom.h
lib/TH/cmake/: FindBLAS.cmake  FindLAPACK.cmake
lib/TH/generic/: THStorage.c  THTensor.cpp  THTensorLapack.c  THTensorMath.c  THVector.h  THVectorDispatch.cpp
lib/TH/vector/: AVX.c  AVX.h  AVX2.cpp  AVX2.h
lib/luaT/: luaT.c  luaT.h
test/: README.md  test.lua
